--- a/js/18/18.1-smiley/index.html
+++ b/js/18/18.1-smiley/index.html
@@ -10,10 +10,11 @@
   <form action="#" class="container">
     <div>How many smilies do you want to see?</div><br>
     <div class="message"></div>
-    <input class="input"></input>
+    <input class="input" type="number" min="0"></input>
     <br><br>
     <input type="submit" value="Click here" class="submit">
   </form>
+  <br>
   
   <script src="./index.js"></script>
 </body>
