--- a/js/22/22.1-forms/index.html
+++ b/js/22/22.1-forms/index.html
@@ -8,6 +8,16 @@
   <title>Document</title>
 </head>
 <body>
+
+  <h2>Please fill the form below</h2>
+
+  <form action="" class="container">
+    <input type="text" placeholder=" Name" class="name" required>
+    <input type="number" placeholder=" Age" class="age" min="0" required>
+    <input type="email" placeholder=" Email" class="email" required>
+    <button type="submit" class="btn">submit</button>
+  </form>
+  
   <script src="./index.js"></script>
 </body>
 </html>
