--- a/js/19/19.2-copy mulitple inputs/index.html
+++ b/js/19/19.2-copy mulitple inputs/index.html
@@ -10,13 +10,14 @@
 <body>
   <h1>Text to Copy:</h1>
   <h2>123456</h2>
+  <h2>251879</h2>
   <form action="" style="border: 1px solid black">
-    <input type="text" class="password" maxlength="1" required>
-    <input type="text" class="password" maxlength="1" required>
-    <input type="text" class="password" maxlength="1" required>
-    <input type="text" class="password" maxlength="1" required>
-    <input type="text" class="password" maxlength="1" required>
-    <input type="text" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
+    <input type="text" onfocus="this.select();" class="password" maxlength="1" required>
   </form>
   <button>Verify</button>
   <script src="./index.js"></script>
