--- a/projects/minecraft/index.html
+++ b/projects/minecraft/index.html
@@ -11,7 +11,10 @@
   
 </head>
 <body>
-  
+  <img class="logo" src="https://cdn.worldvectorlogo.com/logos/minecraft.svg" alt="Minecraft Logo" width="500" height="300">
+  <button class="btn"></button>
+  <button class="btn"></button>
+  <button class="btn"></button>
   <script src="./js/index.js"></script>
 </body>
 </html>
