--- a/projects/minecraft/index.html
+++ b/projects/minecraft/index.html
@@ -132,8 +132,8 @@
           <p>grass</p>
         </div>
         <div class="item-container">
-          <button class="inv inv-diamond">0</button>
-          <p>diamond</p>
+          <button class="inv inv-silver">0</button>
+          <p>silver</p>
         </div>
         <div class="item-container">
           <button class="inv inv-glass">0</button>
@@ -162,7 +162,7 @@
       </div>
      
     </section>
-    <section class="game-screen">
+    <section class="game-screen" id="screen">
       
     </section>
   </div>
