--- a/js/34/34.4-star_wars_2/index.html
+++ b/js/34/34.4-star_wars_2/index.html
@@ -7,11 +7,12 @@
   <meta name="description" content="" />
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Star wars API</title>
   
 </head>
 <body>
   
   <script src="./index.js"></script>
+  <script>insert();</script>
 </body>
 </html>
