--- a/js/34/34.2-chuck_norris/index.html
+++ b/js/34/34.2-chuck_norris/index.html
@@ -7,11 +7,21 @@
   <meta name="description" content="" />
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Chuck Norris</title>
   
 </head>
 <body>
+  <h1>Chuck Norris jokes</h1>
   
+  <select name="categories" id="my-select" class="categories">
+    <option selected disabled hidden>category</option>
+  </select>
+  <div class='btn-holder'>
+    <button class="btn btn-3 hover-border-3"><span>TELL JOKE</span></button>
+  </div>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="./index.js"></script>
+  <script>retrieve();</script>
 </body>
 </html>
