--- a/js/34/34.3-random_puppies/index.html
+++ b/js/34/34.3-random_puppies/index.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="" />
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
+  <title>Puppies</title>
   
 </head>
 <body>
+  <h1 class="head">Look! random dogs!</h1>
+  <input type="number" id="myNumber" class="number" value="1">
+  <div class='btn-holder'>
+    <button class="btn btn-3 hover-border-3"><span>CHOOSE DOG!</span></button>
+  </div>
   
   <script src="./index.js"></script>
 </body>
