--- a/projects/TodoList/index.html
+++ b/projects/TodoList/index.html
@@ -20,10 +20,10 @@
         <p id="remove-text" style="display: none;">Delete All</p>
       </i>
     </div>
-    <input id="inputText" type="text" placeholder="Add to your list..." maxlength="20" required />
+    <input id="inputText" type="text" placeholder="Add to your list..." maxlength="40" required />
     <i id="addButton" class="fas fa-plus"></i>
     <div class="lines">
-      <ul id="display"></ul>
+      <ol id="display"></ol>
     </div>
     
     <div class="completed">
