--- a/projects/TodoList/index.html
+++ b/projects/TodoList/index.html
@@ -8,17 +8,16 @@
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/paper.css">
+  <link rel="stylesheet" href="./css/responsive.css">
   <title>Todo List</title>
   
 </head>
 <body>
 
   <h2 class="title"><i class="fas fa-tasks"></i> to do list</h2>
-  <div class="paper">
+  <div class="paper" id="paper-container">
     <div class="remove-container">
-      <i id="delete-icon" class="far fa-trash-alt">
-        <p id="remove-text" style="display: none;">Delete All</p>
-      </i>
+      <i id="delete-icon" class="far fa-trash-alt"></i>
     </div>
     <input id="inputText" type="text" placeholder="Add to your list..." maxlength="40" required />
     <i id="addButton" class="fas fa-plus"></i>
@@ -26,12 +25,7 @@
       <ol id="display"></ol>
     </div>
     
-    <div class="completed">
-      <h2 class="title-done">
-        completed tasks <i class="far fa-check-circle"></i>
-      </h2>
-      <ul id="display-done"></ul>
-    </div>
+   
     <div class="holes hole-top"></div>
     <div class="holes hole-middle"></div>
     <div class="holes hole-bottom"></div>
@@ -39,6 +33,5 @@
   <script src="./js/class.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/event.js"></script>
-  <script>start();</script>
 </body>
 </html>
