--- a/projects/Table/index.html
+++ b/projects/Table/index.html
@@ -7,13 +7,15 @@
   <meta name="description" content="" />
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
-  <title>
-    
-  </title>
+  <title>BootCamp capsules</title>
   
 </head>
 <body>
-  
+ 
+  <div class="container">
+    <h3>Table</h3>
+    <table class="table"></table>
+  </div>
   <script src="./js/functions.js"></script>
   <script src="./js/class.js"></script>
   <script src="./js/index.js"></script>
