--- a/js/test/index.html
+++ b/js/test/index.html
@@ -6,16 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="" />
   <script src="https://kit.fontawesome.com/5a1dafc887.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/responsive.css">
-  <title>BootCamp capsules</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
   
 </head>
 <body>
-  <script src="./js/functions.js"></script>
-  <script src="./js/class.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/event.js"></script>
-  <script>initPage();</script>
+  
+  <script src="./index.js"></script>
+  <script>getAPI()</script>
 </body>
 </html>
