--- a/projects/Table/index.html
+++ b/projects/Table/index.html
@@ -12,6 +12,7 @@
   
 </head>
 <body>
+  <button class="reset"><i class="fa fa-refresh" aria-hidden="true"></i></button>
   <script src="./js/class.js"></script>
   <script src="./js/event.js"></script>
   <script src="./js/functions.js"></script>
